--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Template</title>
+  <title>Shift Click to CHeck Boxes</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
 <body>
-  <div class="container">
-
+  <h1>Shift Click to Check Multiple</h1>
+  <div class='list'>
   </div>
   <script src='./index.js'></script>
 </body>
